# auto_lit_search

./: .env  .gitignore  app.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml
src/literature_search_project/: crew.py  main.py
src/literature_search_project/config/: agents.yaml  tasks.yaml
src/literature_search_project/tools/: custom_google_scholar_search.py
