[tool.poetry]
name = "literature_search_project"
version = "0.1.0"
description = "A project to perform comprehensive literature search using CrewAI."
authors = ["Your Name <youremail@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "4.12.3"
crewai = "0.41.1"
crewai-tools = {extras = ["tools"], version = "0.41.1"}
docx2txt = "0.8"
duckduckgo-search = "0.3.1"
google-search-results = "2.0.0"
langchain = "0.0.21"
langchain-community = "0.0.1"
langchain-core = "0.0.1"
langchainhub = "0.0.1"
langchain-openai = "0.0.1"
lxml = "4.6.3"
openai = "0.11.2"
python-docx = "0.8.10"
python-dotenv = "0.19.2"
requests = "2.26.0"
semanticscholar = "1.0.0"
streamlit = "1.8.0"
wikipedia = "1.4.0"
xmltodict = "0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
